...
                      child: Obx(() => ElevatedButton(
                          style: ElevatedButton.styleFrom(
                              backgroundColor: controller.activeSearch.value[0]
                                  ? Theme.of(context).primaryColor
                                  : Colors.grey),
                          onPressed: () => controller.sort(0),
                          child: const Text('Title')))),
                  SizedBox(
                      width: (MediaQuery.sizeOf(context).width / 3) - 10,
                      child: Obx(() => ElevatedButton(
                          style: ElevatedButton.styleFrom(
                              backgroundColor: controller.activeSearch.value[1]
                                  ? Theme.of(context).primaryColor
...
                              index: index))
                    ],
                  ))
            ],
          )),
      floatingActionButton: FloatingActionButton(
          key: const Key('add_btn'),
          onPressed: () => Get.toNamed(RoutePath.add),
          child: const Icon(Icons.add)),
    );
  }
}

